--- a/myproject/package.json
+++ b/myproject/package.json
@@ -1,23 +1,19 @@
 {
-  "name": "myproject",
-  "version": "1.0.0",
-  "main": "index.js",
-  "description": "Multilingual Django project with Tailwind CSS",
-  "scripts": {
-    "build:css": "tailwindcss -i ./static/css/tailwind.css -o ./static/css/tailwind-output.css",
-    "watch:css": "tailwindcss -i ./static/css/tailwind.css -o ./static/css/tailwind-output.css --watch"
-  },
-  "keywords": [
-    "django",
-    "tailwind",
-    "multilingual"
-  ],
-  "author": "Abdulwahed Mansour",
-  "email": "abdulwahed.sweden@gmail.com",
-  "license": "MIT",
-  "devDependencies": {
-    "autoprefixer": "^10.4.21",
-    "postcss": "^8.5.3",
-    "tailwindcss": "^4.1.5"
+    "name": "multilingual-django-bootstrap",
+    "version": "1.0.0",
+    "description": "Multilingual Django project with Bootstrap 5",
+    "scripts": {
+      "watch:css": "sass --watch static/scss/custom.scss:static/css/custom.css",
+      "build:css": "sass static/scss/custom.scss:static/css/custom.css --style compressed"
+    },
+    "keywords": [
+      "django",
+      "bootstrap",
+      "multilingual"
+    ],
+    "author": "",
+    "license": "MIT",
+    "devDependencies": {
+      "sass": "^1.60.0"
+    }
   }
-}
